--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>in.orenda</groupId>
-    <artifactId>System Design</artifactId>
+    <artifactId>System_design</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
